# CFD-course

./: CMakeLists.txt  Geometry  Input  coeffs.cpp  coeffs.hpp  geometry.cpp  geometry.hpp  input.cpp  interpolation.cpp  interpolation.hpp  main.cpp  settings.cpp  settings.hpp
Domain/: domain.cpp  domain.hpp
Solver/: Cell.h
